<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="title">Title..</string>
    <string name="detail">Detail..</string>
    <string name="save">Save</string>
    <string name="titlem">Title</string>
    <string name="detailm">Detail</string>
    <string name="update">Update</string>
    <string name="update_note">Update Note</string>
    <string name="add_note">Add Note</string>
</resources>