<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.UpdateFragment"
    android:background="@color/bgColor"
    android:padding="25dp">

    <ImageView
        android:id="@+id/deleteImg"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_note"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/backImg"
        app:layout_constraintEnd_toStartOf="@+id/deleteImg"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"/>

    <ImageView
        android:id="@+id/backImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <EditText
        android:id="@+id/updateEdTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title"
        android:textStyle="bold"
        android:textColor="@color/bgColor"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:padding="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteImg"
        android:background="@drawable/et_bg"
        android:autofillHints="" />

    <EditText
        android:id="@+id/updateEdDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/detail"
        android:textStyle="bold"
        android:gravity="top|start"
        android:lines="5"
        android:maxLines="5"
        android:textColor="@color/bgColor"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:padding="7dp"
        android:background="@drawable/et_bg"
        app:layout_constraintTop_toBottomOf="@+id/updateEdTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/updateBtn"
        android:autofillHints="" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/white"
        android:layout_margin="20dp"
        android:text="@string/update"
        android:textColor="@color/bgColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>